# StateMachine

./: CMakeLists.txt  README.md  package.xml
scripts/: give_answer.py  goodbye_state.py  main.py  meet_person_state.py  navigate_state.py  recognize_object.py  recognize_person.py  start_state.py  wait_person_state.py
srv/: go_to_place_srv.srv
